@@ -21,30 +21,37 @@ import org.apache.commons.logging.LogFactory;
 //import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
+import java.util.Arrays;
 import java.util.Base64;
 
 public class Decryptor {
 
-    private Cipher cipher;
+    private final String encryptionKey;
     private static final Log log = LogFactory.getLog(Decryptor.class);
 
-    public Decryptor(String encryptionKey){
-        try {
-            cipher = CipherFactory.getInstance().createCipher(encryptionKey, Cipher.DECRYPT_MODE);
-        } catch (CipherInitException e) {
-            log.error("Unable to create Cipher " + e);
-        }
+    public Decryptor(String encryptionKey) {
+        this.encryptionKey = encryptionKey;
     }
-
 
     public String decrypt(String encryptedText) {
         try {
-            //byte[] bytes = new BASE64Decoder().decodeBuffer(encryptedText);
-            byte[] bytes = Base64.getDecoder().decode(encryptedText);
-            byte[] enc = cipher.doFinal(bytes);
-            return new String(enc, "UTF-8");
+            byte[] payload = Base64.getDecoder().decode(encryptedText);
+            byte[] iv;
+            byte[] cipherBytes;
+            // New format: [version=0x01][iv 16 bytes][ciphertext]
+            if (payload.length > 17 && payload[0] == CipherFactory.FORMAT_VERSION) {
+                iv = Arrays.copyOfRange(payload, 1, 17);
+                cipherBytes = Arrays.copyOfRange(payload, 17, payload.length);
+            } else {
+                // Legacy format: raw ciphertext encrypted with static IV
+                iv = CipherFactory.LEGACY_IV;
+                cipherBytes = payload;
+            }
+            Cipher cipher = CipherFactory.getInstance().createCipher(encryptionKey, iv, Cipher.DECRYPT_MODE);
+            byte[] dec = cipher.doFinal(cipherBytes);
+            return new String(dec, "UTF-8");
         } catch (Exception e) {
-            throw new DecryptionException("Error while decrypting the value ["+encryptedText+"]",e);
+            throw new DecryptionException("Error while decrypting the value [" + encryptedText + "]", e);
         }
     }
 
